// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.74fe2c104c9690b3e5ee.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.f188aa4153475cccbf57.js",
    4019,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4019,
    },
  ],
  Array [
    "main.f188aa4153475cccbf57.js.map",
    12985,
    Object {
      "development": true,
      "size": 12985,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should delete original assets and keep source maps with option "keep-source-map": warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and delete original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and delete original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and do not report errors on duplicate assets when original assets were removed: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets by default: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and keep original assets: errors 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and keep original assets: warnings 1`] = `Array []`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: errors 1`] = `
Array [
  "Error: Conflict: Multiple assets emit different content to the same filename 23fc1d3ac606d117e05a140e0de79806.svg",
  "Error: Conflict: Multiple assets emit different content to the same filename async.async.a48c0e93eef1aa9e4c84.js",
  "Error: Conflict: Multiple assets emit different content to the same filename main.cf74b442e1d11f81aa8f.js",
]
`;

exports[`"deleteOriginalAssets" option should work and report errors on duplicate assets: warnings 1`] = `Array []`;
